examples/test/testpolicy9041.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9041
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key19: value42
      key40: value37
      key26: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value36
      podSelector:
        matchLabels:
          key17: value14
          key27: value20
